--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -695,7 +695,7 @@
     //Admin GAme Info Half count
     var gamehalfs = game['Game_Half_Count'];
     var admininfo = document.getElementById('admin_inforamtion');
-    admininfo.innerHTML = 'Admin gespiele Hälften: '+gamehalfs;
+    admininfo.innerHTML = 'Admin gespielte Hälften: '+gamehalfs;
     var game_state = game['State'];
     if (game_state == 'waiting'){
       // Simulate an HTTP redirect:
